--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(xpyvm)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(xpyvm main.cpp code/binaryFileParser.cpp code/binaryFileParser.hpp code/byteCode.hpp utils/bufferedInputStream.hpp)
+add_executable(xpyvm main.cpp code/binaryFileParser.cpp code/binaryFileParser.hpp code/byteCode.hpp utils/bufferedInputStream.hpp utils/arrayList.cpp utils/arrayList.hpp)
