调整文件名

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,9 @@ SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -Wall -g -ggdb ")
 SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall")
 
 add_executable(xpyvm main.cpp
-        utils/bufferedInputStream.hpp utils/arrayList.cpp utils/arrayList.hpp
+        utils/BufferedInputStream.hpp utils/ArrayList.cpp utils/ArrayList.hpp
         object/XInteger.cpp object/XInteger.hpp object/XObject.hpp object/XObject.cpp object/XString.cpp object/XString.hpp
-        code/byteCode.hpp code/codeObject.cpp code/codeObject.hpp code/BinaryFileParser.cpp code/BinaryFileParser.hpp
+        code/ByteCode.hpp code/CodeObject.cpp code/CodeObject.hpp code/BinaryFileParser.cpp code/BinaryFileParser.hpp
         runtime/Interpreter.cpp runtime/Interpreter.hpp
         )
 
